# e2e-test

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
config/: assertion-templates.yaml  gate-operator.yaml  model-routing.yaml  playwright-config.yaml  skill-manifest.yaml  state-deps.yaml
docs/: architecture-v2.md  assertion-engine-v2.md  config-ownership.md  data-pack-runtime.md  domain-pack-dev.md  gate-runtime-v2.md  implementation-status.md  index.md  migration-v1-to-v2.md  plugin-sdk.md  release-v1.md  reporting-v2.md  runner-sdk.md  workflow-dsl.md
patches/: README.md  skill-origins.json
runners/: api.yaml  appium.yaml  playwright.yaml
schemas/: artifact-fingerprint.schema.json  assertion-results.schema.json  conflicts.schema.json  healing-events.schema.json  merged-cases.schema.json  model-routing.schema.json  page-functions.schema.json  page-registry.schema.json  prd-analysis.schema.json  quarantine.schema.json  regression-flow.schema.json  regression-paths.schema.json  scenario-definitions.schema.json  skill-manifest.schema.json  test-cases-skeleton.schema.json  test-data-profiles.schema.json  test-report.schema.json
scripts/: bootstrap.ps1  e2e-agent-run.ps1
tests/: README.md  conftest.py  test_agent1_markdown_language.py  test_agent4_html_report.py  test_api_runner_v2.py  test_artifact_fingerprint_w4.py  test_artifact_manifest_v2.py  test_assertion_templates.py  test_browser_runner.py  test_cli_entry_v2.py  test_cli_extensions_v2.py  test_cli_gate_v2.py  test_cli_release_v1.py  test_cli_unified_entry.py  test_cli_v2.py  test_config_resolver_v2.py  test_config_single_source.py  test_conflict_closer.py  test_contract_registry_v2.py  test_data_runtime_v2.py  (+40 more)
(+424 files in other folders)
