[project]
name = "e2e-agent"
version = "1.0.0"
description = "Domain-pack based AI E2E regression automation framework"
requires-python = ">=3.12"
dependencies = [
    "langgraph==1.1.9",
    "langgraph-checkpoint-sqlite>=1.0",
    "litellm>=1.83.11",
    "playwright>=1.50",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]

[project.scripts]
e2e-agent = "e2e_agent.commands.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/e2e_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]
